# vecto

.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/css/: style.css
src/js/: appsettings.js  cors.js  help.js  history.js  main.js  player.js  queue.js  settings.js  state.js  subtitles.js  ui.js
