[package]
name = "vecto"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"

# CORS proxy
axum     = "0.8.9"
tokio    = { version = "1", features = ["full"] }
reqwest  = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
http     = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
